# extras

./: .gitmodules.swp  README.md
bebop_autonomy/bebop_driver/config/: outdoors.yaml  vicon.yaml
bebop_autonomy/bebop_driver/src/: bebop_driver_nodelet.cpp
bebop_autonomy/bebop_tools/launch/: dsl_teleop.launch
vicon_bridge/: CMakeLists.txt  package.xml  vicon_bridge_nodelet.xml
vicon_bridge/include/vicon_bridge/: vicon_receiver.h
vicon_bridge/launch/: vicon.launch  vicon_nodelet.launch
vicon_bridge/msg/: Command.msg  NavdataDSL.msg  StateVector.msg
vicon_bridge/scripts/: __init__.py  loger.py  logfile_publisher.py  plot_data.py  quaternions.py  state_estimation.py  utils.py  vicon.py
vicon_bridge/src/: vicon_bridge.cpp  vicon_bridge_main.cpp
vicon_bridge/srv/: GetState.srv
